# online-store-drf

./: .gitignore  README.md  pyproject.toml
api/: urls.py
config/: settings.py  urls.py
