[tool.poetry]
name = "online-store-drf"
version = "0.1.0"
description = ""
authors = ["DmitriyDecadenz <dima.hubul@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.3"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
spectacular = "^0.4.0"
djoser = "^2.2.2"
django-environ = "^0.11.2"
python-environ = "^0.4.54"
django-debug-toolbar = "^4.3.0"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
